fix mobile overflow

--- a/site-abate/src/index.css
+++ b/site-abate/src/index.css
@@ -7,4 +7,10 @@ body{
   background:#020617;
   color:white;
   font-family:Arial, Helvetica, sans-serif;
+   max-width: 100%;
+  overflow-x: hidden;
+}
+#root {
+  max-width: 100%;
+  overflow-x: hidden;
 }
